--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.3",
+    "typescript": "4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
