--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "script-src 'self' https://accounts.spotify.com https://*.spotify.com; connect-src 'self' https://api.spotify.com https://accounts.spotify.com https://*.spotify.com;"
+            "value": "script-src 'self' 'unsafe-inline' https://accounts.spotify.com https://*.spotify.com https://vercel.live; connect-src 'self' https://api.spotify.com https://accounts.spotify.com https://*.spotify.com;"
           }
         ]
       }
